# STLC-type-inference

./: README.md  reconstruction.cabal  stack.yaml
.nix/: flake.nix
src/: Lexer.x  Main.hs  NameResolution.hs  Parser.y  Printer.hs  Syntax.hs  Typer.hs
test/: Main.hs  Parse.hs  Type.hs
